# Hackathon-2

./: README.md
Phase-2/backend/: .env.example  .gitignore  CLAUDE.md  check_main_app.py  create_db.py  final_validation.py  final_verification.py  migrate_to_better_auth.py  pyproject.toml  requirements.txt  simple_test.py  test_auth_endpoints.py  test_better_auth_integration.py  test_connection.py  test_connection_simple.py  test_endpoints_verification.py  test_endpoints_verification_simple.py  test_main.py  test_syntax_only.py  test_updated_better_auth_integration.py  validate_better_auth_setup.py  validate_syntax.py  verify_auth_endpoints.py
Phase-2/backend/docs/: README.md  better_auth_database_migration.md  better_auth_integration.md
Phase-2/backend/migrations/: 001_better_auth_schema.py  add_user_id_foreign_key_constraint.py  better_auth_schema.sql
Phase-2/backend/scripts/: verify_database_schema.py
Phase-2/backend/src/: database.py  main.py
Phase-2/backend/src/api/: auth.py.backup  tasks.py
Phase-2/backend/src/auth/: deps.py  jwt.py  jwt_middleware.py  router.py  router.py.backup  router.py.original  utils.py
Phase-2/backend/src/core/: config.py  logging_config.py
Phase-2/backend/src/middleware/: error_handler.py
Phase-2/backend/src/models/: account.py  better_auth_models.py  session.py  task.py  user.py
Phase-2/backend/src/schemas/: error.py
Phase-2/backend/src/services/: task_service.py
Phase-2/backend/tests/contract/: test_error_responses.py  test_identity_verification.py  test_jwt_validation.py  test_tasks_api.py  test_user_isolation.py
(+111 files in other folders)
